tests/errors/type_check/function/local_shadows_param.err.expected
error: at 3:13: [TC-DuplicateLocalName] Duplicate variable name 'x' in locals/parameters of function 'f'
   |
 3 |             x: i64;
   |             ^^^^^^^
